{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 3308,
  "lineage": "066e7723-2eee-962e-9baa-1b520173b6be",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Internet_Gateway_Public_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973516012599:internet-gateway/igw-07fede87fec34252b",
            "id": "igw-07fede87fec34252b",
            "owner_id": "973516012599",
            "tags": {
              "Name": "Internet_Gateway_Public_Subnet"
            },
            "vpc_id": "vpc-069bdc6caba09f3f0"
          },
          "dependencies": [
            "aws_vpc.VPC_Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "Elastic_Load_balances_Test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:973516012599:loadbalancer/app/elastic-load-balances-test/88b80d38632bbf9d",
            "arn_suffix": "app/elastic-load-balances-test/88b80d38632bbf9d",
            "dns_name": "elastic-load-balances-test-1420656937.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:973516012599:loadbalancer/app/elastic-load-balances-test/88b80d38632bbf9d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "elastic-load-balances-test",
            "security_groups": [
              "sg-05f9d8fd8314160e6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0452461e5d4f802ac"
              },
              {
                "subnet_id": "subnet-07f07d2fa64a401db"
              }
            ],
            "subnets": [
              "subnet-0452461e5d4f802ac",
              "subnet-07f07d2fa64a401db"
            ],
            "vpc_id": "vpc-069bdc6caba09f3f0",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.Elastic_Load_balances_Test",
            "aws_subnet.VPCPublicSubnetACidrBlock",
            "aws_subnet.VPCPublicSubnetBCidrBlock",
            "aws_vpc.VPC_Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "Listener_Elastic_Load_balances_Test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:973516012599:listener/app/elastic-load-balances-test/88b80d38632bbf9d/c8bfc604c1ebb6ba",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:973516012599:listener/app/elastic-load-balances-test/88b80d38632bbf9d/c8bfc604c1ebb6ba",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:973516012599:loadbalancer/app/elastic-load-balances-test/88b80d38632bbf9d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.Elastic_Load_balances_Test",
            "aws_security_group.Elastic_Load_balances_Test",
            "aws_subnet.VPCPublicSubnetACidrBlock",
            "aws_subnet.VPCPublicSubnetBCidrBlock",
            "aws_vpc.VPC_Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "Listener_Elastic_Load_balances_Test_Docker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:973516012599:listener/app/elastic-load-balances-test/88b80d38632bbf9d/c390ad6c54361335",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:973516012599:listener/app/elastic-load-balances-test/88b80d38632bbf9d/c390ad6c54361335",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:973516012599:loadbalancer/app/elastic-load-balances-test/88b80d38632bbf9d",
            "port": 3000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.Elastic_Load_balances_Test",
            "aws_security_group.Elastic_Load_balances_Test",
            "aws_subnet.VPCPublicSubnetACidrBlock",
            "aws_subnet.VPCPublicSubnetBCidrBlock",
            "aws_vpc.VPC_Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "lb-listener-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:973516012599:targetgroup/lb-target-group/086de49b728bd639",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:973516012599:listener-rule/app/elastic-load-balances-test/88b80d38632bbf9d/c8bfc604c1ebb6ba/2ffb61cd3996b23d",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:973516012599:listener-rule/app/elastic-load-balances-test/88b80d38632bbf9d/c8bfc604c1ebb6ba/2ffb61cd3996b23d",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:973516012599:listener/app/elastic-load-balances-test/88b80d38632bbf9d/c8bfc604c1ebb6ba",
            "priority": 1
          },
          "dependencies": [
            "aws_lb.Elastic_Load_balances_Test",
            "aws_lb_listener.Listener_Elastic_Load_balances_Test",
            "aws_lb_target_group.lb_target_group",
            "aws_security_group.Elastic_Load_balances_Test",
            "aws_subnet.VPCPublicSubnetACidrBlock",
            "aws_subnet.VPCPublicSubnetBCidrBlock",
            "aws_vpc.VPC_Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "lb-listener-rule-Docker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:973516012599:targetgroup/lb-target-group-docker/7b03e8b459667bb7",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:973516012599:listener-rule/app/elastic-load-balances-test/88b80d38632bbf9d/c390ad6c54361335/01b18c870fa62e4b",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/query"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:973516012599:listener-rule/app/elastic-load-balances-test/88b80d38632bbf9d/c390ad6c54361335/01b18c870fa62e4b",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:973516012599:listener/app/elastic-load-balances-test/88b80d38632bbf9d/c390ad6c54361335",
            "priority": 2
          },
          "dependencies": [
            "aws_lb.Elastic_Load_balances_Test",
            "aws_lb_listener.Listener_Elastic_Load_balances_Test_Docker",
            "aws_lb_target_group.lb_target_group_docker",
            "aws_security_group.Elastic_Load_balances_Test",
            "aws_subnet.VPCPublicSubnetACidrBlock",
            "aws_subnet.VPCPublicSubnetBCidrBlock",
            "aws_vpc.VPC_Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:973516012599:targetgroup/lb-target-group/086de49b728bd639",
            "arn_suffix": "targetgroup/lb-target-group/086de49b728bd639",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:973516012599:targetgroup/lb-target-group/086de49b728bd639",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "lb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-069bdc6caba09f3f0"
          },
          "dependencies": [
            "aws_vpc.VPC_Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_target_group_docker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:973516012599:targetgroup/lb-target-group-docker/7b03e8b459667bb7",
            "arn_suffix": "targetgroup/lb-target-group-docker/7b03e8b459667bb7",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:973516012599:targetgroup/lb-target-group-docker/7b03e8b459667bb7",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "lb-target-group-docker",
            "port": 3000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-069bdc6caba09f3f0"
          },
          "dependencies": [
            "aws_vpc.VPC_Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Route_Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ed54926f966194a6",
            "owner_id": "973516012599",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07fede87fec34252b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route_Table"
            },
            "vpc_id": "vpc-069bdc6caba09f3f0"
          },
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway_Public_Subnet",
            "aws_vpc.VPC_Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Roue_Table_VPCPrivateSubnetACidrBlock",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d452fd76902f3301",
            "route_table_id": "rtb-0ed54926f966194a6",
            "subnet_id": "subnet-0fb8a829b6f34ce38"
          },
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway_Public_Subnet",
            "aws_route_table.Route_Table",
            "aws_subnet.VPCPrivateSubnetACidrBlock",
            "aws_vpc.VPC_Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Roue_Table_VPCPrivateSubnetBCidrBlock",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088dce54f54797796",
            "route_table_id": "rtb-0ed54926f966194a6",
            "subnet_id": "subnet-07e0cfe18da135c31"
          },
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway_Public_Subnet",
            "aws_route_table.Route_Table",
            "aws_subnet.VPCPrivateSubnetBCidrBlock",
            "aws_vpc.VPC_Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Roue_Table_VPCPublicSubnetACidrBlock",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00eed8e9ef96e9ebc",
            "route_table_id": "rtb-0ed54926f966194a6",
            "subnet_id": "subnet-0452461e5d4f802ac"
          },
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway_Public_Subnet",
            "aws_route_table.Route_Table",
            "aws_subnet.VPCPublicSubnetACidrBlock",
            "aws_vpc.VPC_Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Roue_Table_VPCPublicSubnetBCidrBlock",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dba8e06fb873ebcf",
            "route_table_id": "rtb-0ed54926f966194a6",
            "subnet_id": "subnet-07f07d2fa64a401db"
          },
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway_Public_Subnet",
            "aws_route_table.Route_Table",
            "aws_subnet.VPCPublicSubnetBCidrBlock",
            "aws_vpc.VPC_Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Elastic_Load_balances_Test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973516012599:security-group/sg-05f9d8fd8314160e6",
            "description": "Balanceador de carga V2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f9d8fd8314160e6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Port 3000 para el consumo de la aplicacion de Flask",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Port 443, port HTTPS",
                "from_port": 433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 433
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Port 80 para el consumo de apache",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Test_Joneshys_Elastic_Load_balances_Test_",
            "name_prefix": "",
            "owner_id": "973516012599",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-069bdc6caba09f3f0"
          },
          "dependencies": [
            "aws_vpc.VPC_Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "HTTP_Anyware",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973516012599:security-group/sg-0110bdee09c5e1fcf",
            "description": "HTTP for Anyware ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0110bdee09c5e1fcf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05f9d8fd8314160e6"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05f9d8fd8314160e6"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Test_Joneshys_HTTP_Anyware",
            "name_prefix": "",
            "owner_id": "973516012599",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-069bdc6caba09f3f0"
          },
          "dependencies": [
            "aws_security_group.Elastic_Load_balances_Test",
            "aws_vpc.VPC_Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_RDS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973516012599:security-group/sg-007ed4170675c6a74",
            "description": "Grupo de seguridad para el acceso a la DB desde las subnet Privadas",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-007ed4170675c6a74",
            "ingress": [
              {
                "cidr_blocks": [
                  "201.233.219.25/32"
                ],
                "description": "Ingreso a la DB desde la subnet privada",
                "from_port": 58963,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09cb1391ae3e37feb"
                ],
                "self": false,
                "to_port": 58963
              }
            ],
            "name": "Test_Joneshys_SG_RDS_",
            "name_prefix": "",
            "owner_id": "973516012599",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-069bdc6caba09f3f0"
          },
          "dependencies": [
            "aws_security_group.SSH_Anyware",
            "aws_vpc.VPC_Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SSH_Anyware",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973516012599:security-group/sg-09cb1391ae3e37feb",
            "description": "SSH_Anyware inbound to SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09cb1391ae3e37feb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Test_Joneshys_SSH_Anyware",
            "name_prefix": "",
            "owner_id": "973516012599",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-069bdc6caba09f3f0"
          },
          "dependencies": [
            "aws_vpc.VPC_Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "VPCPrivateSubnetACidrBlock",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973516012599:subnet/subnet-0fb8a829b6f34ce38",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.170.32.0/26",
            "id": "subnet-0fb8a829b6f34ce38",
            "map_public_ip_on_launch": false,
            "owner_id": "973516012599",
            "tags": {
              "Name": "VPCPrivateSubnetACidrBlock"
            },
            "vpc_id": "vpc-069bdc6caba09f3f0"
          },
          "dependencies": [
            "aws_vpc.VPC_Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "VPCPrivateSubnetBCidrBlock",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973516012599:subnet/subnet-07e0cfe18da135c31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.170.32.64/26",
            "id": "subnet-07e0cfe18da135c31",
            "map_public_ip_on_launch": false,
            "owner_id": "973516012599",
            "tags": {
              "Name": "VPCPrivateSubnetBCidrBlock"
            },
            "vpc_id": "vpc-069bdc6caba09f3f0"
          },
          "dependencies": [
            "aws_vpc.VPC_Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "VPCPublicSubnetACidrBlock",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973516012599:subnet/subnet-0452461e5d4f802ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.170.32.128/27",
            "id": "subnet-0452461e5d4f802ac",
            "map_public_ip_on_launch": true,
            "owner_id": "973516012599",
            "tags": {
              "Name": "VPCPublicSubnetACidrBlock"
            },
            "vpc_id": "vpc-069bdc6caba09f3f0"
          },
          "dependencies": [
            "aws_vpc.VPC_Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "VPCPublicSubnetBCidrBlock",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973516012599:subnet/subnet-07f07d2fa64a401db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.170.32.160/27",
            "id": "subnet-07f07d2fa64a401db",
            "map_public_ip_on_launch": true,
            "owner_id": "973516012599",
            "tags": {
              "Name": "VPCPublicSubnetBCidrBlock"
            },
            "vpc_id": "vpc-069bdc6caba09f3f0"
          },
          "dependencies": [
            "aws_vpc.VPC_Test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC_Test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:973516012599:vpc/vpc-069bdc6caba09f3f0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.170.32.0/24",
            "default_network_acl_id": "acl-07a639d4dd5cc3925",
            "default_route_table_id": "rtb-0fcc4809bc20ee4d9",
            "default_security_group_id": "sg-0f48524f905dd947b",
            "dhcp_options_id": "dopt-23882d59",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-069bdc6caba09f3f0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fcc4809bc20ee4d9",
            "owner_id": "973516012599",
            "tags": {
              "Name": "Test_Joneshys_VPC_Test"
            }
          }
        }
      ]
    }
  ]
}